--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -31,7 +31,19 @@
 
 .rodapePrincipal-navMap-list {
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    /* flex-direction: column;
+    flex-wrap: wrap; */
+    flex-flow: column wrap;
     height: 250px;
+}
+
+.conteudoPrincipal-cursos {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: baseline;
+}
+
+.conteudoPrincipal-cursos-link {
+    width: 23%;
+    margin-bottom: 1%;
 }
