--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -40,10 +40,17 @@
 .conteudoPrincipal-cursos {
     display: flex;
     flex-flow: row wrap;
-    justify-content: baseline;
 }
 
 .conteudoPrincipal-cursos-link {
     width: 23%;
     margin-bottom: 1%;
+}
+
+.conteudoPrincipal-cursos-link:nth-child(4n) {
+    margin-right: 0;
+}
+
+.conteudoPrincipal-cursos-link:nth-child(4n+1) {
+    margin-right: 0;
 }
